--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@ select {
   border: 0px none;
 }
 
+label {
+  display: inline-block;
+}
+
+output {
+  display: inline-block;
+}
+
 #controlPanel {
   position: fixed;
   padding: 10px;
