added working screenshot button

--- a/public/style.css
+++ b/public/style.css
@@ -29,6 +29,16 @@ select {
   border-radius: 1vh;
 }
 
+button {
+  background-color: #909090;
+  font-size: inherit;
+  font-weight: bolder;
+  padding: .7vh;
+  margin: .3vh;
+  border: 0 none;
+  border-radius: 1vh;
+}
+
 label {
   display: inline-block;
 }
